--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <!-- CSS -->
 <link rel="stylesheet" href="style.css">
 
+<!-- Fonte -->
+<link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
+
     <title>Homenagem Zoro</title>
 </head>
 <body>
+    <h1 class="titulo">Homenagem ao Zoro</h1>
+
 
     <div class="box">
         <span style="--i:1;"><img src="img/img1.jpg" alt=""></span>
